# autotests-api

./: .gitignore  api_client_create_course.py  api_client_create_exercise.py  api_client_get_user.py  faker_example.py  grpc_course_client.py  grpc_course_server.py  grpc_server.py  httpx_authentification.py  httpx_client.py  httpx_create_file.py  httpx_create_user.py  httpx_delete_user.py  httpx_example.py  httpx_get_user.py  httpx_get_user_me.py  httpx_update_user.py  json_example.json  json_python.py  json_user.json  my_example.txt  pydantic_basics.py  pydantic_create_user.py  pydantic_json_schema_create_user.py  pydantic_json_schema_get_user.py  pyproject.toml  pytest.ini  tcp_users_client.py  tcp_users_server.py  websocket_users_client.py  websocket_users_server.py  xml_example.xml  xml_python.py
clients/: api_client.py  private_http_builder.py
clients/authentication/: authentication_client.py  authentication_schema.py
clients/courses/: courses_client.py  courses_schema.py
clients/exercises/: exercises_client.py  exercises_schema.py
clients/files/: files_client.py  files_schema.py
clients/users/: private_users_client.py  public_users_client.py  users_schema.py
fixtures/: courses.py  exercises.py  users.py
tests/: conftest.py  test_authentication.py  test_pytest_markers.py  test_users.py
tests/authentication/: test_authentication.py
tests/courses/: test_courses.py
tests/files/: test_files.py
tests/pytest/: test_fixtures.py  test_parametrization.py  test_pytest.py  test_pytest_markers.py  test_reruns.py  test_usefixtures.py
tools/: fakers.py
(+7 files in other folders)
